fix: positioning on mobile phone

--- a/client/src/Pages/Order/Order.css
+++ b/client/src/Pages/Order/Order.css
@@ -271,8 +271,8 @@
   align-items: center;
   font-family: var(--poppins), sans-serif;
   border-radius: 10px;
-  margin: 8px;
-  padding: 10px;
+  margin: auto 5px;
+  padding: 5px;
   cursor: pointer;
 }
 
@@ -280,14 +280,15 @@
   overflow: hidden;
   border-radius: 20px;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .product-info img {
+  padding: 0;
   width: 100%;
   height: 150px;
   object-fit: cover;
   transition: 0.4s;
-  border-radius: 20px;
 }
 
 .product-info:hover img {
